--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -328,7 +328,10 @@ button:hover, .popup-box button:hover {
 .page-transition {
     animation: rotateOut 0.6s forwards;
 }
-
+.rotation-link.page-transition {
+    display: inline-block;
+    animation: rotateOut 0.6s forwards;
+}
 
 @keyframes rotateOut {
     from {
