--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -332,6 +332,12 @@ button:hover, .popup-box button:hover {
     display: inline-block;
     animation: rotateOut 0.6s forwards;
 }
+.fade-out-transition {
+    animation: fadeOut 0.6s forwards;
+}
+.fade-in-transition {
+    animation: fadeIn 0.6s forwards;
+}
 
 @keyframes rotateOut {
     from {
@@ -341,5 +347,21 @@ button:hover, .popup-box button:hover {
     to {
         transform: rotate(360deg);
         opacity: 0;
+    }
+}
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
     }
 }
