--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,9 +9,12 @@
 body {
     font-family: 'Roboto', sans-serif;
     color: goldenrod;
-    background: #269213 url(../images/felt_text.jpeg);
-    background-blend-mode: multiply;
+
+    background-color: #269213;
+    background-image: url(../images/felt_text.jpeg);
     background-repeat: repeat;
+    background-size: auto; /* or cover */
+    background-blend-mode: multiply;
 }
 
 a {
