--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -122,7 +122,7 @@ nav a {
     letter-spacing: 2px;
 }
 
-.col-2 img {
+.col-2.home img {
     max-width: 100%;
     padding: 50px 0;
 }
@@ -380,3 +380,52 @@ button:hover, .popup-box button:hover {
         opacity: 1;
     }
 }
+
+
+.account-page {
+    padding: 2rem;
+    text-align: center;
+    color: white;
+}
+
+.userdata {
+    background-color: #1c1c1c;
+    padding: 2rem;
+    border-radius: 1rem;
+    max-width: 400px;
+    margin: 0 auto 3rem;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+
+.username {
+    font-size: 1.5rem;
+    margin: 0.5rem 0;
+}
+
+.tokens {
+    font-size: 1.2rem;
+    margin: 1rem 0;
+}
+
+label {
+    display: block;
+    padding: 5px;
+    margin: 1rem 0 0.5rem;
+    border-radius: 5px;
+    background-color: #ff5555;
+}
+
+input{
+    display: none;
+}
+
+#profile-pic {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    background-color: #fff;
+    border-radius: 50%;
+    margin-top: 30px;
+}
+
