--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,6 @@ body {
     background-color: #269213;
     background-image: url(../images/felt_text.jpeg);
     background-repeat: repeat;
-    background-size: auto;
     background-blend-mode: multiply;
 }
 
@@ -96,6 +95,10 @@ nav ul {
 nav ul li {
     display: inline-block;
     margin-right: 20px;
+}
+
+nav a:hover {
+    text-decoration: underline;
 }
 
 nav a {
