maybe fixed ios, added flairs, only need buy function now

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@ body {
     font-family: 'Roboto', sans-serif;
     color: goldenrod;
     background-color: #269213;
-    background-image: url(../images/felt_text.jpeg);
+    background-image: url(../images/felt_text_green.jpeg);
     background-repeat: repeat;
     background-blend-mode: multiply;
 }
